objects/GEMS_Cycle_Time_Report_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Days_Open__c</fullName>
        <label>Avg Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>GEMS Cycle Time Report Snapshot</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>GEMS Report Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Cycle time Report Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>